feat: add movie details

--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -9,6 +9,7 @@
         height: 4px;
         bottom: -6px;
         left: 50%;
+        transform: translateX(-50%);
         border-radius: 50%;
         background-color: $color-primary;
       }
